# calibration

./: CMakeLists.txt  CMakeLists.txt~  package.xml
include/: client.h  names.h  publisher.h
src/: .sync_publisher.cpp.swp  calibrator.cpp  calibrator_main.cpp  client.cpp  client.h  client_main.cpp  names.cpp  publisher.cpp  publisher_node.cpp  rgb_PS1080_PrimeSense.yaml  ros2cv.cpp  sync_publisher.cpp
srv/: compute_effector_camera_quick.srv  compute_effector_camera_quick.srv~
