<?xml version="1.0"?>
<package>
  <name>calibration</name>
  <version>0.0.0</version>
  <description>The calibration package</description>

  <maintainer email="arush@todo.todo">arush</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>visp</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>visp</run_depend>

  <export>

  </export>
</package>
